Move latest version from GitLab